:lipstick: Incluindo e estilizando a área da resposta

--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
             <button class="botao" id="botao-dividir">Dividir</button>
         </div>
     </div>
-    <div class="area-resposta">...</div>
+    <div class="area-resposta">Resultado = </div>
 </body>
 </html>
